Manually building serialization